...

extension Renovation {

    static let colors = ["Pink", "Purple", "Red", "Orange", "Gold", "Green", "Teal", "Light Blue", "Dark Blue", "Midnight", "Dark Gray", "Gray"]

    var renovationTitle: String {
        title ?? String.localizing("New Renovation", tableName: "CoreData", comment: "")
    }

    var renovationDetail: String {
        detail ?? ""
    }

...
