...
        _color = State(wrappedValue: renovation.renovationColor)
    }

    var body: some View {
        Form {
            Section(header: Text("Basic settings")) {
                TextField("Renovation name", text: $title.onChange(update))
                TextField("Description of this renovation", text: $detail.onChange(update))
            }

            Section(header: Text("Custom renovation color")) {
                LazyVGrid(columns: colorColumns) {
                    ForEach(Renovation.colors, id: \.self) { action in
...
